// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H7 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Regular",
      "fontSize": 14,
      "lineHeight": 15.78,
      "paddingBottom": 1.8,
      "paddingTop": 3.6,
    }
  }
>
  "We may speak about a place where there are no tears, no death, no fear, no night; but those are just the benefits of heaven. The beauty of heaven is seeing God." ― Max Lucado
</Text>
`;

exports[`the H7 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Regular",
      "fontSize": 14,
      "lineHeight": 15.78,
      "paddingBottom": 1.8,
      "paddingTop": 3.6,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H7 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Regular",
      "fontSize": 14,
      "lineHeight": 15.78,
      "paddingBottom": 1.8,
      "paddingTop": 3.6,
    }
  }
>
  Default H7 text
</Text>
`;
